# debug_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile.lark-consumer  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/debug_agent/: __init__.py  main.py  settings.py
backend/tests/: test_env_example.py  test_settings.py  test_verify_script.py
backend/tests/api/: conftest.py  lark_bot_helpers.py  test_action_queue.py  test_artifact_images.py  test_assistant_chat.py  test_batch_job_submission.py  test_budget_enforcement_routes.py  test_case_debug.py  test_case_detail.py  test_case_listing.py  test_csv_import.py  test_debug_batches.py  test_debug_job_export.py  test_debug_run_view.py  test_evidence_detail.py  test_health.py  test_job_evidence_detail.py  test_job_listing.py  test_job_report.py  test_job_report_writeback.py  test_job_status.py  test_job_submission.py  test_jsonl_import.py  test_lark_operation_audits.py  test_observability_summary.py  test_operations_readiness.py  test_performance_summary.py  test_recommended_action_status.py  test_spreadsheet_client_configuration.py  test_spreadsheet_row_import.py  test_spreadsheet_sync.py  test_worker_control.py  test_xiaod_user_views.py
backend/tests/artifacts/: __init__.py  test_store.py
backend/tests/assistant/: test_debug_lessons.py  test_knowledge_base.py
backend/tests/cases/: __init__.py  test_comparator.py  test_models.py  test_multimodal_fixtures.py
backend/tests/debug_closure/: test_auto_closure_hypothesis_integration.py  test_causal_comparator.py  (+6 more)
(+593 files in other folders)
