[project]
name = "debug-agent-backend"
version = "0.1.0"
description = "Backend for handwriting OCR debug agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "lark-oapi>=1.4.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.0",
  "pillow>=10.0.0",
  "pycryptodome>=3.20.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
